--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BasicCalculatorChatGpt</string>
     <string name="slash">/</string>
+    <string name="dash">-</string>
 </resources>
